<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txt_note"
        android:gravity="center">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/icon_background"
            android:padding="5dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/app_info"
            android:textColor="@color/textColorAbout"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/txt_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/author"
            android:textColor="@color/textColorAbout"
            android:textSize="17dp"/>

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_owner"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="@color/textColorAbout"
            android:textSize="17dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/txt_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/note"
        android:textColor="@color/textColorAbout"
        android:textSize="17dp"/>
</RelativeLayout>
