<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/detail_layout_padding">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_vertical_detail"
        android:gravity="center_horizontal"
        android:text="@string/dialog_title"
        android:textColor="@color/textColor"
        android:textSize="@dimen/detail_title_text_size"/>

    <include
        layout="@layout/horizontal_line"
        />
    <!--SSID-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_detail"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ssid"
            android:textColor="@color/textColor"
            android:textSize="@dimen/detail_item_text_size"/>

        <include
            android:layout_width="1dp"
            android:layout_height="@dimen/save_item_size"
            android:layout_marginLeft="@dimen/detail_margin_line"
            android:layout_marginRight="@dimen/detail_margin_line"
            layout="@layout/vertical_line"/>

        <TextView
            android:id="@+id/txt_ssid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:textSize="@dimen/detail_item_text_size"/>
    </LinearLayout>

    <!--PSK-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/psk"
            android:textColor="@color/textColor"
            android:textSize="@dimen/detail_item_text_size"/>
        <include
            android:layout_width="1dp"
            android:layout_height="@dimen/save_item_size"
            android:layout_marginLeft="@dimen/detail_margin_line"
            android:layout_marginRight="@dimen/detail_margin_line"
            layout="@layout/vertical_line"/>
        <TextView
            android:id="@+id/txt_psk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:textSize="@dimen/detail_item_text_size"/>
    </LinearLayout>

    <!--Security-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/security"
            android:textColor="@color/textColor"
            android:textSize="@dimen/detail_item_text_size"/>
        <include
            android:layout_width="1dp"
            android:layout_height="@dimen/save_item_size"
            android:layout_marginLeft="@dimen/detail_margin_line"
            android:layout_marginRight="@dimen/detail_margin_line"
            layout="@layout/vertical_line"/>
        <TextView
            android:id="@+id/txt_security"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:textSize="@dimen/detail_item_text_size"/>
    </LinearLayout>

    <!--Priority-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_vertical_detail"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/priority"
            android:textColor="@color/textColor"
            android:textSize="@dimen/detail_item_text_size"/>
        <include
            android:layout_width="1dp"
            android:layout_height="@dimen/save_item_size"
            android:layout_marginLeft="@dimen/detail_margin_line"
            android:layout_marginRight="@dimen/detail_margin_line"
            layout="@layout/vertical_line"/>
        <TextView
            android:id="@+id/txt_priority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:textSize="@dimen/detail_item_text_size"/>
    </LinearLayout>

    <include
        layout="@layout/horizontal_line"
        />
</LinearLayout>